k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-server-demo
  labels:
    app: token-server-demo
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: token-server-demo
